add: docs and fix: boolean not recognized
