# internal/request/kategori.go
@@ -4,7 +4,7 @@ import "sireg/rest-api-kegiatan/internal/model"
 
 type ReqKategori struct {
 	Nama     string `json:"nama" binding:"required"`
-	IsActive bool   `json:"is_active" binding:"required"`
+	IsActive string `json:"is_active" binding:"required,boolean"`
 }
 
 type PathKategoriID struct {
@@ -12,16 +12,28 @@ type PathKategoriID struct {
 }
 
 func (k ReqKategori) ConvertToModel() *model.Kategori {
+	var isActive bool
+	if k.IsActive == "true" {
+		isActive = true
+	} else {
+		isActive = false
+	}
 	return &model.Kategori{
 		Nama:     k.Nama,
-		IsActive: k.IsActive,
+		IsActive: isActive,
 	}
 }
 
 func (k ReqKategori) ConvertToModelWithID(kategoriID int) *model.Kategori {
+	var isActive bool
+	if k.IsActive == "true" {
+		isActive = true
+	} else {
+		isActive = false
+	}
 	return &model.Kategori{
 		ID:       kategoriID,
 		Nama:     k.Nama,
-		IsActive: k.IsActive,
+		IsActive: isActive,
 	}
 }
